Closed Bug 1661543 Opened 4 years ago Closed 4 years ago

Thread contention between nsNSSComponent's background task queue and NSS

Categories

(Core :: Security: PSM, defect, P1)

defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 81+ fixed
firefox79 --- unaffected
firefox80 + fixed
firefox81 + fixed
firefox82 + fixed

People

(Reporter: jcj, Assigned: keeler)

References

(Regression)

Details

(Keywords: regression)

Profiling by :acreskey has shown the race fix in Bug 1651449 has caused a performance regression on desktop and mobile, with many profiles to support it.

Regression window is specifically this commit: https://hg.mozilla.org/mozilla-central/rev/323e4aecc563981f5090ef9a01888888987f75f5

Stefan, will this ensure that the Android Components build that Fenix uses will include the backout?

Flags: needinfo?(sarentz)

To get these fixes in Fenix, we will need new GeckoView 80 and 81 Beta releases.

Flags: needinfo?(sarentz)
Pushed by rmaries@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8fcc41684a9f
Backed out 1 changesets (bug 1651449) for performance regression. a=backout CLOSED TREE
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch

Backout landed on ESR78 for the regularly-scheduled 78.3esr release:
https://hg.mozilla.org/releases/mozilla-esr78/rev/2fd428c0b23b

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.