Bug 1661543 - Backed out 1 changesets (bug 1651449) for performance regression. a=backout CLOSED TREE

Backed out changeset 323e4aecc563 (bug 1651449)